# x86e

./: CMakeLists.txt
include/cpu/: cpu.h  i386.h
include/cpu/im/: i386im.h  x86im.h
include/io/: Logger.h  fs.h
include/memory/: memory.h
include/utils/: utils.h
src/: main.cpp
src/cpu/: cpu.cpp  i386.cpp
src/cpu/im/: i386im.cpp  x86im.cpp
src/io/: Logger.cpp  fs.cpp
src/memory/: memory.cpp
src/utils/: utils.cpp
